overflow fix for mobile (test)

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body,
 html {
-  min-height: 100%;
+  height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f4f4f9;
@@ -8,7 +8,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .App {
